--- a/src/ArchiToolkit.Assertions/Resources/AssertionLocalization.resx
+++ b/src/ArchiToolkit.Assertions/Resources/AssertionLocalization.resx
@@ -112,4 +112,7 @@
     <data name="MatchCountAssertion" xml:space="preserve">
         <value>The data [{SubjectName}] {AssertionType} {Not}match {Expression} {ExpectedMatchCount} times, but it is {ActualMatchCount} times.</value>
     </data>
+    <data name="ContainSingleAssertion" xml:space="preserve">
+        <value>The data [{SubjectName}] {AssertionType} {Not}have a single item which is {ExpectedValue}, but there are {MatchedCount} item(s).</value>
+    </data>
 </root>
