--- a/analyzers/ArchiToolkit.Pure/Resources.resx
+++ b/analyzers/ArchiToolkit.Pure/Resources.resx
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <root>
-    <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata" id="root"
+                xmlns="">
         <xsd:element name="root" msdata:IsDataSet="true">
-            
+
         </xsd:element>
     </xsd:schema>
     <resheader name="resmimetype">
@@ -13,30 +14,41 @@
         <value>1.3</value>
     </resheader>
     <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral,
+            PublicKeyToken=b77a5c561934e089
+        </value>
     </resheader>
     <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral,
+            PublicKeyToken=b77a5c561934e089
+        </value>
     </resheader>
     <data name="AB0001Description" xml:space="preserve">
-        <value>Type names should not contain the company name.</value><comment>An optional longer localizable description of the diagnostic.</comment>
+        <value>Type names should not contain the company name.</value>
+        <comment>An optional longer localizable description of the diagnostic.</comment>
     </data>
     <data name="AB0001MessageFormat" xml:space="preserve">
-        <value>Type name '{0}' contains the company name</value><comment>The format-able message the diagnostic displays.</comment>
+        <value>Type name '{0}' contains the company name</value>
+        <comment>The format-able message the diagnostic displays.</comment>
     </data>
     <data name="AB0001Title" xml:space="preserve">
-        <value>Type name contains the company name</value><comment>The title of the diagnostic.</comment>
+        <value>Type name contains the company name</value>
+        <comment>The title of the diagnostic.</comment>
     </data>
     <data name="AB0001CodeFixTitle" xml:space="preserve">
-        <value>Replace '{0}' with '{1}'</value><comment>The title of the code fix.</comment>
+        <value>Replace '{0}' with '{1}'</value>
+        <comment>The title of the code fix.</comment>
     </data>
     <data name="AB0002Description" xml:space="preserve">
-        <value>The speed must be lower than the Speed of Light.</value><comment>An optional longer localizable description of the diagnostic.</comment>
+        <value>The speed must be lower than the Speed of Light.</value>
+        <comment>An optional longer localizable description of the diagnostic.</comment>
     </data>
     <data name="AB0002MessageFormat" xml:space="preserve">
-        <value>The specified speed '{0}' must be lower than the Speed of Light</value><comment>The format-able message the diagnostic displays.</comment>
+        <value>The specified speed '{0}' must be lower than the Speed of Light</value>
+        <comment>The format-able message the diagnostic displays.</comment>
     </data>
     <data name="AB0002Title" xml:space="preserve">
-        <value>The impossible speed</value><comment>The title of the diagnostic.</comment>
+        <value>The impossible speed</value>
+        <comment>The title of the diagnostic.</comment>
     </data>
 </root>
