:sparkles: Make the const work!

--- a/src/analyzers/ArchiToolkit.PureConst.Analyzer/Resources.resx
+++ b/src/analyzers/ArchiToolkit.PureConst.Analyzer/Resources.resx
@@ -30,13 +30,13 @@
         <value>You can't use Const Attribute on an accessor.</value>
     </data>
     <data name="PC0001MessageFormat" xml:space="preserve">
-        <value>You can't use Const Attribute on the accessor {0}.</value>
+        <value>You can't use Const Attribute on the accessor [{0}].</value>
     </data>
     <data name="PC1001Description" xml:space="preserve">
         <value>This is the checking symbol</value>
     </data>
     <data name="PC1001MessageFormat" xml:space="preserve">
-        <value>The {0} is the checking symbol</value>
+        <value>The [{0}] is the checking symbol</value>
     </data>
     <data name="PC1001Tittle" xml:space="preserve">
         <value>This is the checking symbol</value>
@@ -57,7 +57,7 @@
         <value>The variable {0} was added to check</value>
     </data>
     <data name="PC1003Description" xml:space="preserve">
-        <value>Additioanl Varaible</value>
+        <value>Additional varaible for checking</value>
     </data>
     <data name="PC0002Description" xml:space="preserve">
         <value>You can't modify this field here, becasue the mtethod is const</value>
@@ -66,25 +66,25 @@
         <value>You can't modify this field here, becasue the mtethod is const</value>
     </data>
     <data name="PC0002MessageFormat" xml:space="preserve">
-        <value>You can't modify the field {0} here, becasue the mtethod is const</value>
+        <value>You can't modify the field {[0}] here, becasue the mtethod is const</value>
     </data>
     <data name="PC0003Description" xml:space="preserve">
-        <value>You can't modify this property here, becasue the mtethod is const</value>
+        <value>You can't modify this property here, becasue the method is const</value>
     </data>
     <data name="PC0003MessageFormat" xml:space="preserve">
-        <value>You can't modify the property {0} here, becasue the mtethod is const</value>
+        <value>You can't modify the property [{0}] here, becasue the method is const</value>
     </data>
     <data name="PC0003Tittle" xml:space="preserve">
-        <value>You can't modify this property here, becasue the mtethod is const</value>
+        <value>You can't modify this property here, becasue the method is const</value>
     </data>
     <data name="PC0004Description" xml:space="preserve">
-        <value>You can't invoke this method here, becasue the mtethod is const</value>
+        <value>You can't invoke this method here, becasue the method is const</value>
     </data>
     <data name="PC0004MessageFormat" xml:space="preserve">
-        <value>You can't invoke the method {0} here, becasue the mtethod is const</value>
+        <value>You can't invoke the method [{0}] here, becasue the method is const</value>
     </data>
     <data name="PC0004Tittle" xml:space="preserve">
-        <value>You can't invoke this method here, becasue the mtethod is const</value>
+        <value>You can't invoke this method here, becasue the method is const</value>
     </data>
     <data name="PC0005Tittle" xml:space="preserve">
         <value>You can't modify this variable here, because it is const</value>
@@ -93,6 +93,42 @@
         <value>You can't modify the variable [{0}] here, because it is const</value>
     </data>
     <data name="PC0005Description" xml:space="preserve">
+        <value>You can't modify this variable here, because it is const</value>
+    </data>
+    <data name="PC0006Tittle" xml:space="preserve">
+        <value>You can't modify this field here, becasue the method is const</value>
+    </data>
+    <data name="PC0006Description" xml:space="preserve">
+        <value>You can't modify this field here, becasue the method is const</value>
+    </data>
+    <data name="PC0006MessageFormat" xml:space="preserve">
+        <value>You can't modify the field [{0}] here, becasue the method is const</value>
+    </data>
+    <data name="PC0007Description" xml:space="preserve">
+        <value>You can't modify this property here, becasue the method is const</value>
+    </data>
+    <data name="PC0007Tittle" xml:space="preserve">
+        <value>You can't modify this property here, becasue the method is const</value>
+    </data>
+    <data name="PC0007MessageFormat" xml:space="preserve">
+        <value>You can't modify the property {0} here, becasue the method is const</value>
+    </data>
+    <data name="PC0008Tittle" xml:space="preserve">
+        <value>You can't invoke this method here, becasue the method is const</value>
+    </data>
+    <data name="PC0008Description" xml:space="preserve">
+        <value>You can't invoke this method here, becasue the method is const</value>
+    </data>
+    <data name="PC0008MessageFormat" xml:space="preserve">
+        <value>You can't invoke the method[{0}] here, becasue the method is const</value>
+    </data>
+    <data name="PC0009Tittle" xml:space="preserve">
+        <value>You can't modify this variable here, because it is const</value>
+    </data>
+    <data name="PC0009MessageFormat" xml:space="preserve">
+        <value>You can't modify the variable [{0}] here, because it is const</value>
+    </data>
+    <data name="PC0009Description" xml:space="preserve">
         <value>You can't modify this variable here, because it is const</value>
     </data>
 </root>
