--- a/Tests/ArchiToolkit.Grasshopper.Instance/l10n/ArchiToolkit.Resources.resx
+++ b/Tests/ArchiToolkit.Grasshopper.Instance/l10n/ArchiToolkit.Resources.resx
@@ -12,7 +12,85 @@
 	<resheader name="writer">
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
-	<data name="test" xml:space="preserve">
-		<value>Hello World!</value>
+	<data name="ArchiToolkit.Grasshopper.Instance.Param_ExampleTypes.TypeName" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="ArchiToolkit.Grasshopper.Instance.Param_ExampleTypes.TypeDescription" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="ArchiToolkit.Grasshopper.Instance.Param_ExampleTypes.Name" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="ArchiToolkit.Grasshopper.Instance.Param_ExampleTypes.Nickname" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="ArchiToolkit.Grasshopper.Instance.Param_ExampleTypes.Description" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="Category.MyTestCategory" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="Subcategory.Parameter" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.i.Name" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.i.Nickname" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.i.Description" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.test.Name" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.test.Nickname" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.test.Description" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.tree.Name" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.tree.Nickname" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.tree.Description" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.data.Name" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.data.Nickname" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.data.Description" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.result.Name" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.result.Nickname" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.result.Description" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.Component.Name" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.Component.Nickname" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="AnotherName.Component.Description" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="Category.Cate" xml:space="preserve">
+		<value>Hello</value>
+	</data>
+	<data name="Subcategory.SubTest" xml:space="preserve">
+		<value>Hello</value>
 	</data>
 </root>
