--- a/Tests/ArchiToolkit.Grasshopper.Instance/l10n/ArchiToolkit.Resources.resx
+++ b/Tests/ArchiToolkit.Grasshopper.Instance/l10n/ArchiToolkit.Resources.resx
@@ -12,20 +12,20 @@
 	<resheader name="writer">
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
-	<data name="ArchiToolkit.Grasshopper.Instance.Param_ExampleTypes.TypeName" xml:space="preserve">
-		<value>ExampleTypes</value>
+	<data name="ArchiToolkit.Grasshopper.Instance.Param_MyType.TypeName" xml:space="preserve">
+		<value>MyType</value>
 	</data>
-	<data name="ArchiToolkit.Grasshopper.Instance.Param_ExampleTypes.TypeDescription" xml:space="preserve">
-		<value>ExampleTypes</value>
+	<data name="ArchiToolkit.Grasshopper.Instance.Param_MyType.TypeDescription" xml:space="preserve">
+		<value>MyType</value>
 	</data>
-	<data name="ArchiToolkit.Grasshopper.Instance.Param_ExampleTypes.Name" xml:space="preserve">
-		<value>ExampleTypes</value>
+	<data name="ArchiToolkit.Grasshopper.Instance.Param_MyType.Name" xml:space="preserve">
+		<value>MyType</value>
 	</data>
-	<data name="ArchiToolkit.Grasshopper.Instance.Param_ExampleTypes.Nickname" xml:space="preserve">
-		<value>ExampleTypes</value>
+	<data name="ArchiToolkit.Grasshopper.Instance.Param_MyType.Nickname" xml:space="preserve">
+		<value>MyType</value>
 	</data>
-	<data name="ArchiToolkit.Grasshopper.Instance.Param_ExampleTypes.Description" xml:space="preserve">
-		<value>ExampleTypes</value>
+	<data name="ArchiToolkit.Grasshopper.Instance.Param_MyType.Description" xml:space="preserve">
+		<value>MyType</value>
 	</data>
 	<data name="Category.MyTestCategory" xml:space="preserve">
 		<value>MyTestCategory</value>
