--- a/Tests/ArchiToolkit.Grasshopper.Instance/l10n/ArchiToolkit.Resources.resx
+++ b/Tests/ArchiToolkit.Grasshopper.Instance/l10n/ArchiToolkit.Resources.resx
@@ -13,10 +13,10 @@
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
 	<data name="ArchiToolkit.Grasshopper.Instance.Param_MyType.TypeName" xml:space="preserve">
-		<value>MyType</value>
+		<value>A Type</value>
 	</data>
 	<data name="ArchiToolkit.Grasshopper.Instance.Param_MyType.TypeDescription" xml:space="preserve">
-		<value>MyType</value>
+		<value>An interesting Type</value>
 	</data>
 	<data name="ArchiToolkit.Grasshopper.Instance.Param_MyType.Name" xml:space="preserve">
 		<value>MyType</value>
@@ -40,7 +40,7 @@
 		<value>AnotherType</value>
 	</data>
 	<data name="ArchiToolkit.Grasshopper.Instance.Param_AnotherType.Name" xml:space="preserve">
-		<value>AnotherType</value>
+		<value>What a type</value>
 	</data>
 	<data name="ArchiToolkit.Grasshopper.Instance.Param_AnotherType.Nickname" xml:space="preserve">
 		<value>AnotherType</value>
